<resources>
    <string name="app_name">CRUSP for Mobile</string>
    <string name="go">Go</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="measurement">Measurement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hossman_nt_tuwien_ac_at">hossman.nt.tuwien.ac.at</string>
    <string name="hostname_of_measurement_server">Hostname of Measurement Server</string>
    <string name="_8000">8000</string>
    <string name="port_number_of_measurement_server">Port number of Measurement Server</string>
    <string name="set_total_volume_of_measurement_in_kilobyte">set total volume of measurement in kilobyte</string>
    <string name="set_packet_size_in_byte">set packet size in byte</string>
    <string name="_1860">1860</string>
    <string name="_6200">6200</string>
    <string name="set_rate_of_measurement_in_megabit_per_seconds">set rate of measurement in Megabit per seconds</string>
    <string name="set_sleep_time_between_repeats">set sleep time between repeats in ms</string>
    <string name="_1">1</string>
    <string name="set_number_of_repeats_of_the_measurement">set number of repeats of the measurement</string>
    <string name="set_max_wait_timeout_between_packets">set max wait timeout between packets in ms</string>
    <string name="_100">100</string>
    <string name="_3">3</string>
    <string name="_200">200</string>
    <string name="rate">Rate</string>
    <string name="host">Host</string>
    <string name="repeats">Repeats</string>
    <string name="port">Port</string>
    <string name="volume">Volume</string>
    <string name="packetSize">Packet Size</string>
    <string name="wait">Wait</string>
    <string name="sleep">Sleep</string>
    <string name="_300">300</string>
    <string name="max_timeout">Max Timeout</string>
    <string name="volume_in_kb">Volume in kB</string>
    <string name="inter_repeat_sleep_in_ms">Inter-Repeat Sleep in ms</string>
    <string name="max_timeout_in_ms">Max Timeout in ms</string>
    <string name="rate_in_mbit_s">Rate in MBit/s</string>
    <string name="packet_size_in_byte">Packet Size in Byte</string>
    <string name="path">Path</string>
    <string name="request">request</string>
    <string name="burst_rate_chart">Burst Rate Chart</string>
    <string name="title_activity_package_delta">Packet Delta Chart</string>
    <string name="packet_delta_chart">Packet Delta Chart</string>
    <string name="details">Details</string>
    <string name="title_activity_result_details">Result Details</string>
    <string name="continuous_n_measurement">Continuous \n  measurement</string>
    <string name="mcc">MCC</string>
    <string name="empty">  </string>
    <string name="mmc">MMC</string>
    <string name="earfcn">EARFCN</string>
    <string name="pci">PCI</string>
    <string name="see_results">See Results</string>
    <string name="see_details">See Details</string>
    <string name="tac">TAC</string>
    <string name="cqi">CQI</string>
    <string name="dbm">DBM</string>
    <string name="rsrp">RSRP</string>
    <string name="ta">TA</string>
    <string name="asu">ASU</string>
    <string name="rsrq">RSRQ</string>
    <string name="rssnr">RSSNR</string>
    <string name="operator_long">Operator Long</string>
    <string name="arfcn">ARFCN</string>
    <string name="operator">Operator</string>
    <string name="cid">CID</string>
    <string name="rssi">RSSI</string>
    <string name="bsLng">BS LNG</string>
    <string name="bsLat">BS LAT</string>
    <string name="system_id">System ID</string>
    <string name="network_id">Network ID</string>
    <string name="uarfcn">UARFCN</string>
    <string name="lac">LAC</string>
    <string name="psc">PSC</string>
    <string name="bsic">BSIC</string>
    <string name="continuous_measurements">Continuous Measurements</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="space_MB">&#160;MB</string>
    <string name="this_month">&#160;used this month</string>
    <string name="_1000">1000</string>
    <string name="crusp">CRUSP</string>
    <string name="credit">Credit in MB</string>
    <string name="repeat_cycle">Repeat Cycle</string>
    <string name="_60">60</string>
    <string name="unit">Unit</string>
    <string name="min">min</string>
    <string name="apply">Apply</string>
    <string name="next_measurement">Next measurement:&#160;</string>
    <string name="next_measurement_default">Next measurement: -</string>
    <string name="last_measurement_default">Last measurement: -</string>
    <string name="speed">Speed m/s</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="type">Type</string>
    <string name="persisted">DB</string>
    <string name="use_default_settings">Default settings</string>
    <string name="downlink">Downlink</string>
    <string name="both">Both</string>
    <string name="uplink">Uplink</string>
    <string name="mbps">Mbps</string>
    <string name="accuracy">GPS Accuracy</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="band">Band</string>
    <string name="nrarfcn">NRARFCN</string>
    <string name="csisinr">CSISINR</string>
    <string name="csirsrp">CSIRSRP</string>
    <string name="csirsrq">CSIRSRQ</string>
    <string name="sssinr">SSSNIR</string>
    <string name="ssrsrp">SSRSRP</string>
    <string name="ssrsrq">SSRSRQ</string>
    <string-array name="unit_array">
        <item>sec</item>
        <item>min</item>
        <item>hour</item>
    </string-array>
</resources>
